Fixed issue where blog post page would have scroll bar on mobile.

--- a/src/client/pages/Posts/components/Post/Post.scss
+++ b/src/client/pages/Posts/components/Post/Post.scss
@@ -1,7 +1,8 @@
 @import "../../../../common/variables";
 
 .post-container {
-  width: $post-width + px;
+  width: 90%;
+  max-width: $post-width + px;
   padding-left: 7px;
 }
 
